--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,7 @@
   footer {
     width: 100%;
     height: 210px;
-    background: #222;
+    background: #151515;
     position: relative;
     z-index: 100;
   }
@@ -71,23 +71,35 @@
   @media screen and (max-width: 768px) {
     footer {
       width: 100%;
-      height: 60%;
+      height: 400px;
     }
     .footer_inner {
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+      gap: 30px !important;
+    }
+    .footer_inner .foot_logo {
+      padding-top: 10px;
+      width: 100px !important;
+      margin-left: 10px;
+    }
+    .footer_inner .foot_logo > img {
+      width: 100%;
+      object-fit: cover;
     }
     .footer_inner .textSide {
-      width: 100%;
+      width: 90%;
       display: flex;
       flex-direction: column;
-      gap: 20px;
       align-self: flex-start;
       margin-left: 10px;
     }
     .left_txt > .tit {
       margin-right: 30px;
+    }
+    .left_txt > .desc {
+      margin-left: 10px;
     }
     .right_txt {
       margin-top: 10px;
@@ -96,7 +108,7 @@
       margin-right: 50px;
     }
     .tit, .desc, .under_line {
-      gap: 30px;
+      gap: 20px;
     }
     .tit > p {
     font-size: 0.8rem;
@@ -113,11 +125,9 @@
       border-bottom: 1px solid #888;
     }
     .footer_inner .copyright {
-      box-sizing: border-box;
-      margin-top: -30px !important;
+      margin-top: 5px !important;
       font-size: 0.7rem;
       align-self: flex-start;
       margin-left: 10px;
     }
-    .footer_inner .foot_logo {margin-left: 10px;}
   }
