--- a/css/style.css
+++ b/css/style.css
@@ -124,6 +124,16 @@ html {
   z-index: 5;
   opacity: 1;
 }
+.home_fade-text {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 1.2s ease;
+}
+
+.home_fade-text.home_active {
+  opacity: 1;
+  transform: translateY(0);
+}
 
 .home_intro-inner {
   display: flex;
@@ -154,18 +164,6 @@ html {
   -webkit-text-fill-color: transparent;
   animation: shine 3s linear infinite;
 }
-/* .home_fade-item {
-  opacity: 0;
-  transform: translateY(40px);
-  transition: all 1.2s ease;
-}
-.home_fade-item.home_active  {
-  opacity: 1;
-  transform: translateY(0);
-}
-#home_intro .home_intro-left.home_active { transition-delay: 0.2s; }
-#home_intro .home_intro-right.home_active { transition-delay: 0.4s; } */
-
 @keyframes shine {
   0% {
     background-position: 100% 0;
@@ -181,12 +179,36 @@ html {
 .home_intro-right {
   flex: 0 0 65%;
 }
-.home_intro-right p {
+.home_intro-left .home_fade-text:nth-child(1) {
+  transition-delay: 0.2s;
+}
+.home_intro-left .home_fade-text:nth-child(2) {
+  transition-delay: 0.5s;
+}
+.home_intro-left .home_fade-text:nth-child(3) {
+  transition-delay: 0.8s;
+}
+
+/* 오른쪽 본문 & 버튼 순차 delay */
+.home_intro-right .home_fade-text:nth-of-type(1) {
+  transition-delay: 1.1s;
+}
+.home_intro-right .home_fade-text:nth-of-type(2) {
+  transition-delay: 1.4s;
+}
+.home_intro-right .home_fade-text {
+  opacity: 0;
+  transform: translateY(30px);
+  transition: all 1s ease;
   font-size: 1.1rem;
   font-weight: 400;
   font-family: "Pretendard";
   line-height: 1.9;
   color: #555;
+}
+.home_intro-right .home_fade-text.home_active{
+  opacity: 1;
+  transform: translateY(0);
 }
 .home_intro-right a{
   font-size: 1.125rem;
@@ -332,32 +354,36 @@ html {
 /* 🔹 왼쪽 텍스트 */
 .home_product-text {
   flex: 0 0 30%;
-  text-align: left;
+  text-align: center;
   margin-left: 6.25rem;
   opacity: 0;
   transform: translateY(3.125rem); 
   transition: all 1.4s cubic-bezier(0.25, 0.1, 0.25, 1); 
   will-change: transform, opacity;
 }
-.home_product-text.home_active {
-  opacity: 1;
-  transform: translateY(0);
+.home_product-text .home_slide-item {
+  opacity: 0;
+  transform: translateX(40px);
+  transition: all 1s ease;
 }
-.home_product-text > * {
+.home_product-text .home_slide-item.home_active {
+  opacity: 1;
+  transform: translateX(0);
+}
+.home_product-text {
   opacity: 0;
   transform: translateY(40px);
  transition: all 1.3s cubic-bezier(0.25, 0.1, 0.25, 1);
   will-change: transform, opacity;
 }
-
-.home_product-text.home_active > * {
+.home_product-text.home_active {
   opacity: 1;
   transform: translateY(0);
 }
-.home_product-text.home_active .home_subtitle { transition-delay: 0.2s; }
-.home_product-text.home_active h2 { transition-delay: 0.5s; }
-.home_product-text.home_active p { transition-delay: 0.8s; }
-.home_product-text.home_active .home_view-more { transition-delay: 1.1s; }
+.home_product-text .home_subtitle.home_active { transition-delay: 0.2s; }
+.home_product-text h2.home_active { transition-delay: 0.5s; }
+.home_product-text p.home_active { transition-delay: 0.8s; }
+.home_product-text .home_view-more.home_active { transition-delay: 1.1s; }
 .home_product-text .home_subtitle {
   font-size: 1.2rem;
   font-family: "Cormorant", serif;
@@ -366,7 +392,6 @@ html {
   color: #111;
   /* margin-bottom: 70px; */
 }
-
 .home_product-text h2 {
   font-family: "Cormorant", serif;
   font-size: 3.6rem;
@@ -739,8 +764,16 @@ html {
     font-size: 15px;
   }
   #home_scrollIndicator, .home_arrows{
-    display: none;
+    display: flex;
+    opacity: 1;
   } 
+   #home_hero{
+    height: 70vh;
+  }
+  #home_hero video {
+    object-fit: cover;
+    object-position: center top;
+  }
   #home_intro {
     flex-direction: column;
     padding: 4rem 2rem;
@@ -751,13 +784,13 @@ html {
     gap: 3rem;
   }
   .home_intro-left h2{
-    font-size: 2.2rem;
+    font-size: 4.8rem;
   }
   .home_intro-light p{
-    font-size: 2.2rem;
+    font-size: 1.8rem;
   }
   .home_view-more{
-    font-size: 1.2rem;
+    font-size: 0.5rem;
     margin-top: 0.8rem;
     gap: 0.8rem;
   }
@@ -795,8 +828,11 @@ html {
     text-align: center;
     order: 1;
   }
+   .home_product-text.home_active {
+    text-align: left;
+  }
   .home_product-text h2{
-    font-size: 2rem;
+    font-size: 5rem;
     line-height: 1.3;
   }
   .home_gallery-wrap {
